2015-05-05  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el: Fix.
	("org"): Fix yasnippet setting.

2015-05-04  Liu Xin  <meteor1113@qq.com>

	* init-elpa.el: Add init-elpa.el

2015-03-30  Liu Xin  <meteor1113@gmail.com>

	* init-misc.el (projectile-global-mode): Enable projectile default.

	* Update magit to 1.2.2

	* init-misc.el (projectile-mode): Add projectile.

2015-03-11  Liu Xin  <meteor1113@gmail.com>

	* init-custom.el (holiday-other-holidays): set calendar

	* init-misc.el ("calendar"): set cal-china-x

	* init-basic.el (holiday-local-holidays): set calendar

	* init-site.el (fboundp): set ecb-source-path

2015-03-10  Liu Xin  <meteor1113@gmail.com>

	* init-custom.el: Add init-custom.el

2014-10-29  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (default-directory): update for emacs-24.4

	* init-misc.el ("tabbar"): update for emacs-24.4's desktop-save-mode.

	* init-basic.el (key-binding): update for emacs-24.4

2014-10-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (and): fix for server-ensure-safe-dir.

2014-09-30  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Add "Open in Windows Explorer" to tabbar's menu.

2014-08-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (appt-message-warning-time): set
	appt-message-warning-time to 0.

2014-05-04  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add markdown-mode.

2014-04-09  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (*): Change zone idle from 600 to 1800.

2014-02-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (frame-title-format): Display encoding in title.

	* init-misc.el (require): Fix: when encoding changed, tabbar's
	status is not update.

2014-02-12  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (locate-library): Fix diff-hl for emacs-24.1

	* init-basic.el (and): Suppress error "directory ~/.emacs.d/server is unsafe" on windows.

2014-02-11  Meteor Liu  <meteor1113@gmail.com>
