@@ -1,3 +1,7 @@
+2015-05-06  Liu Xin  <meteor1113@qq.com>
+
+	* init-toolbar.el: Adjust minormode menu's order.
+
 2015-05-05  Liu Xin  <meteor1113@qq.com>
 
 	* init-elpa.el: Fix.
